
name:                                       eng-prob
version:                                    0.1.0.0
homepage:                                   https://github.com/rcook/eng-prob#readme
license:                                    MIT
license-file:                               LICENSE
author:                                     Richard Cook
maintainer:                                 rcook@rcook.org
copyright:                                  2018 Richard Cook
category:                                   Command Line
build-type:                                 Simple
cabal-version:                              >= 1.10
extra-source-files:                         README.md

source-repository head
  type:                                     git
  location:                                 https://github.com/rcook/eng-prob.git

library
  default-language:                         Haskell2010
  hs-source-dirs:                           lib
  ghc-options:                              -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
  exposed-modules:                          EngProb

executable 0000-p17-table-1-1
  default-language:                         Haskell2010
  hs-source-dirs:                           0000-p17-table-1-1
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5

executable 0010-p24-chapter1_1
  default-language:                         Haskell2010
  hs-source-dirs:                           0010-p24-chapter1_1
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5

executable 0020-p45-practice
  default-language:                         Haskell2010
  hs-source-dirs:                           0020-p45-practice
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5

executable 0030-p68-chapter2_1
  default-language:                         Haskell2010
  hs-source-dirs:                           0030-p68-chapter2_1
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0040-p70-theta_rad
  default-language:                         Haskell2010
  hs-source-dirs:                           0040-p70-theta_rad
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0050-p72-degrees-radians
  default-language:                         Haskell2010
  hs-source-dirs:                           0050-p72-degrees-radians
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0060-p78-chapter2_2
  default-language:                         Haskell2010
  hs-source-dirs:                           0060-p78-chapter2_2
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0070-p79-limits
  default-language:                         Haskell2010
  hs-source-dirs:                           0070-p79-limits
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0080-p104-case
  default-language:                         Haskell2010
  hs-source-dirs:                           0080-p104-case
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0090-p107-iteration
  default-language:                         Haskell2010
  hs-source-dirs:                           0090-p107-iteration
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

test-suite eng-prob-test
  type:                                     exitcode-stdio-1.0
  default-language:                         Haskell2010
  hs-source-dirs:                           test
  main-is:                                  Spec.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  other-modules:                            EngProbSpec
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

