
name:                                       eng-prob
version:                                    0.1.0.0
homepage:                                   https://github.com/rcook/eng-prob#readme
license:                                    MIT
license-file:                               LICENSE
author:                                     Richard Cook
maintainer:                                 rcook@rcook.org
copyright:                                  2018 Richard Cook
category:                                   Command Line
build-type:                                 Simple
cabal-version:                              >= 1.10
extra-source-files:                         README.md
data-files:                                 *.dat
data-dir:                                   _data

source-repository head
  type:                                     git
  location:                                 https://github.com/rcook/eng-prob.git

library
  default-language:                         Haskell2010
  hs-source-dirs:                           lib
  ghc-options:                              -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
  exposed-modules:                          EngProb
                                          , EngProb.Loop
                                          , EngProb.Parser
                                          , EngProb.Parser.Funcs
                                          , EngProb.Parser.Types
                                          , EngProb.Prelude
                                          , EngProb.Util

test-suite eng-prob-test
  type:                                     exitcode-stdio-1.0
  default-language:                         Haskell2010
  hs-source-dirs:                           test
  main-is:                                  Spec.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  other-modules:                            ParserSpec
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob
                                          , hspec

executable 0000-p17-table-1-1
  default-language:                         Haskell2010
  hs-source-dirs:                           0000-p17-table-1-1
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5

executable 0010-p24-chapter1_1
  default-language:                         Haskell2010
  hs-source-dirs:                           0010-p24-chapter1_1
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5

executable 0020-p45-practice
  default-language:                         Haskell2010
  hs-source-dirs:                           0020-p45-practice
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5

executable 0030-p68-chapter2_1
  default-language:                         Haskell2010
  hs-source-dirs:                           0030-p68-chapter2_1
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0040-p70-theta_rad
  default-language:                         Haskell2010
  hs-source-dirs:                           0040-p70-theta_rad
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0050-p72-degrees-radians
  default-language:                         Haskell2010
  hs-source-dirs:                           0050-p72-degrees-radians
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0060-p78-chapter2_2
  default-language:                         Haskell2010
  hs-source-dirs:                           0060-p78-chapter2_2
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0070-p79-limits
  default-language:                         Haskell2010
  hs-source-dirs:                           0070-p79-limits
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0080-p104-case
  default-language:                         Haskell2010
  hs-source-dirs:                           0080-p104-case
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0090-p107-chapter3_1
  default-language:                         Haskell2010
  hs-source-dirs:                           0090-p107-chapter3_1
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0100-p107-chapter3_2
  default-language:                         Haskell2010
  hs-source-dirs:                           0100-p107-chapter3_2
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0110-p116-chapter3_4
  default-language:                         Haskell2010
  hs-source-dirs:                           0110-p116-chapter3_4
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0120-p123-chapter3_5
  default-language:                         Haskell2010
  hs-source-dirs:                           0120-p123-chapter3_5
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0130-p125-chapter3_6
  default-language:                         Haskell2010
  hs-source-dirs:                           0130-p125-chapter3_6
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0140-p127-chapter3_7
  default-language:                         Haskell2010
  hs-source-dirs:                           0140-p127-chapter3_7
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0150-p129-chapter3_8
  default-language:                         Haskell2010
  hs-source-dirs:                           0150-p129-chapter3_8
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            Chart
                                          , Chart-cairo
                                          , base >= 4.7 && < 5
                                          , eng-prob

executable 0160-p137-chapter3_9
  default-language:                         Haskell2010
  hs-source-dirs:                           0160-p137-chapter3_9
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0170-p155-chapter4_2
  default-language:                         Haskell2010
  hs-source-dirs:                           0170-p155-chapter4_2
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            Chart
                                          , Chart-cairo
                                          , base >= 4.7 && < 5
                                          , eng-prob

executable 0180-p166-chapter4_3
  default-language:                         Haskell2010
  hs-source-dirs:                           0180-p166-chapter4_3
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob
                                          , random

executable 0190-p168-chapter4_4
  default-language:                         Haskell2010
  hs-source-dirs:                           0190-p168-chapter4_4
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob
                                          , random

executable 0200-p170-rand_float
  default-language:                         Haskell2010
  hs-source-dirs:                           0200-p170-rand_float
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob
                                          , random

executable 0210-p175-chapter4_5
  default-language:                         Haskell2010
  hs-source-dirs:                           0210-p175-chapter4_5
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob
                                          , random

executable 0220-p186-chapter4_6
  default-language:                         Haskell2010
  hs-source-dirs:                           0220-p186-chapter4_6
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0230-p189-chapter4_7
  default-language:                         Haskell2010
  hs-source-dirs:                           0230-p189-chapter4_7
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0240-p194-chapter4_8
  default-language:                         Haskell2010
  hs-source-dirs:                           0240-p194-chapter4_8
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0250-p196-fibonacci
  default-language:                         Haskell2010
  hs-source-dirs:                           0250-p196-fibonacci
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob

executable 0260-p209-vectors
  default-language:                         Haskell2010
  hs-source-dirs:                           0260-p209-vectors
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , eng-prob
                                          , hspec
                                          , monad-extras
                                          , vector

